final edits for now

--- a/bibliography.tex
+++ b/bibliography.tex
@@ -13,7 +13,7 @@
 
 \bibitem{dunecdr} DUNE CDR.
 
-\bibitem{CRubbia }"The Liquid-argon time projection chamber: a new concept for Neutrino Detector", C. Rubbia, CERN-EP/77-08 (1977).
+\bibitem{CRubbia}"The Liquid-argon time projection chamber: a new concept for Neutrino Detector", C. Rubbia, CERN-EP/77-08 (1977).
 
 
 \bibitem{icarus_mainref} "Design, construction and tests of the ICARUS T600 detector", ICARUS Collaboration, Nucl. Inst. Meth., A527 (2004) 329-410. 
@@ -36,26 +36,29 @@ Phys. Rev. D 83, 052007 (2011).
 at $\overline{E}$= 4.0 GeV'', B. Eberly et. al., \url{http://arxiv.org/abs/1503.01520}.
 
 \bibitem{fsirev} see for example review article ``Pion-nucleus Interactions'',
-T.~S.~H. Lee and R. P. Redwine, Ann. Rev. Nucl. Sci, 52, 23 (2002).
+T.~S.~H. Lee and R. P. Redwine, Ann. Rev. Nucl. Sci,  {\bf 52}, 23 (2002).
 
-\bibitem{argoneut_angle}
-"A study of electron recombination using highly ionizing particles in the ArgoNeuT Liquid Argon TPC", R. Acciarri et al, Journal of Instrumentation (JINST), 2013 JINST Vol. 8 P08005.
+\bibitem{jaffe} ``The columnar theory of ionization'', Ann. Phys. {\bf 42}, 303 (1931).
+
+\bibitem{icarus_recombination} ``Study of electron recombination in liquid argon with the ICARUS TPC'', S. Amoruso et. al, NIM A {\bf 523}, 275 (2004). 
+
+\bibitem{argoneut_angle} "A study of electron recombination using highly ionizing particles in the ArgoNeuT Liquid Argon TPC", 
+R. Acciarri et al, Journal of Instrumentation 
+(JINST), 2013 JINST Vol. 8 P08005.
+
+
 
 \bibitem{nn_pid} based on
 ``Neural Network Parameterizations of Electromagnetic Nucleon Form Factors'', K. M. Graczyk, P. Plonski, R. Sulej, JHEP Vol. 2010, No 9, pp.1-30 (2010).
 \bibitem{rd_pid} 
-\begin{verbatim}
-http://www.ire.pw.edu.pl/~rsulej/NetMaker
-\end{verbatim}
-
+\url{http://www.ire.pw.edu.pl/~rsulej/NetMaker}
 
 
 \bibitem{icarus_eg} ``Experimental search for the LSND anomaly with the ICARUS
 detector in the CNGS neutrino beam'', ICARUS Collaboration, Eur. Phys. J. C (2013) 73:2345.
 
-\bibitem{argoneut_eg} "Results from and Status of ArgoNeuT
-and MicroBooNE" by A. Szelc. conference: http://neutrino2014.bu.edu/.
-
+\bibitem{argoneut_eg} "Results from and Status of ArgoNeuT and MicroBooNE" by 
+A. Szelc., conference: \url{http://neutrino2014.bu.edu/}.
 
 
 \end{thebibliography}
