Modified plots for the angles and momenta of the outgoing particles.  Increased size of the plots.

--- a/detbeamtest.tex
+++ b/detbeamtest.tex
@@ -109,8 +109,8 @@ The DUNE experiment will run beam in both neutrino and anti-neutrino
 configurations. These beams will be composed  mainly of muon neutrinos (anti-neutrinos) as well as electron neutrinos (anti-neutrinos). In Fig.~\ref{fig:particle_momenta} the distributions of momenta and angles of particles created in neutrino interactions from simulated beam fluxes are shown. The rate on the particles are calculated for the 34kton far detector and  are combined from both neutrino and anti-neutrino beams. In addition the electron rates from charged current interactions for muon neutrinos oscillated to electron neutrinos are shown. 
 \begin{figure}[h!]
   \centering
-\includegraphics[width=0.49\textwidth,height=5.0cm]{figures/True_Momenta_per_Particle_9_2_1_0_log}
-\includegraphics[width=0.49\textwidth,height=5.0cm]{figures/True_theta_per_Particle_9_2_1_0_lin}
+\includegraphics[width=0.79\textwidth,height=8.0cm]{figures/True_Momenta_per_Particle_9_2_1_0_log} \\
+\includegraphics[width=0.79\textwidth,height=8.0cm]{figures/True_theta_per_Particle_9_2_1_0_lin}
   \caption{Particle momenta (left) and angular (right) distributions for particles produced in neutrino interactions 
 from $\nu_e$, $\nu_\mu$, $\bar \nu_e$ and $\bar \nu_\mu$ at the far detector location.
 %{\color{red}  combine e+e-, improve information content (y-axis, change colors, etc )
