--- a/detbeamtest.tex
+++ b/detbeamtest.tex
@@ -30,8 +30,8 @@ shift of -5\% on the measured
 appearance signal %(for $\delta_{CP}=0$)
  and backgrounds in DUNE. 
 The crosses shows 
-The expected signal shape is shown for several values of $\delta_{CP}$
-(solid curve: $\delta_{CP}=0$, crosses: $\delta_{CP}=+\pi/2$ and -$\pi/2$). 
+The expected signal shape is shown for several values of $\delta_{CP}$. 
+(solid curve: $\delta_{CP}=0$, lower crosses: $\delta_{CP}=+\pi/2$, and upper crosses: $\delta_{CP}=-\pi/2$). 
 Energy scale uncertainties will distort and shift the $\nu_e$ appearance spectra and
 can mimic a non-zero
 $\delta_{CP}$ phase.
@@ -43,7 +43,7 @@ $\delta_{CP}$ phase.
   \caption{DUNE $\nu_e$ appearance signal and background spectra. 
 Solid curves show the effect of -5\% lepton energy scale shift on the 
 measured appearance $\nu_e$ and $\overline{\nu}_e$ signals assuming $\delta_{CP}=0$.
-The crosses show the expected signal shape for $\delta_{CP}=+\pi/2$ and -$\pi/2$. 
+The crosses show the expected signal shape for $\delta_{CP}=+\pi/2$ (lower crosses) and -$\pi/2$  (upper crosses). 
 Ratios show the distortion on the $\nu_e$ and $\overline{\nu}_e$ spectra due to the 
 5\% energy scale shift. 
 }
@@ -213,7 +213,7 @@ $\mu^-$ or $\mu^+$ &   3, 5, 7  &  5K & $E_\mu$ MCS \\ \hline
 antiproton &  low-energy tune  &  (100) & antiproton stars \\ \hline
 K$^+$  & 1 & (13K)   &   response, PID, PDK  \\ \hline
 K$^+$  & 0.5, 0.7 & (5K)   &   response, PID, PDK  \\ \hline \hline
-$\mu$, e, proton  & 1 (vary angle $\times$5 & 10K  & reconstruction  \\ \hline
+$\mu$, e, proton  & 1 (vary angle $\times$5) & 10K  & reconstruction  \\ \hline
 \end{tabular}
 \caption{Requirements summary for particle types and momenta. Items in parenthesis indicate lower priority (see text).
 }
@@ -541,11 +541,11 @@ from the energy deposition pattern.
 %\includegraphics[width=0.49\textwidth,height=5.0cm]{figures/pid_probabilities}
 \includegraphics[width=0.49\textwidth,height=6.0cm]{figures/eff-bgdrej-diffen}
 \includegraphics[width=0.49\textwidth,height=6.0cm]{figures/APAT600_all_norm}
-\label{fig:egam}
   \caption{(Left)Background rejection versus signal efficiency for various energies.
 {\color{red}
 }
 }
+\label{fig:egam}
 \end{figure}
 Electron-photon separation has been studied in LAr TPCs
 (ICARUS~\cite{icarus_eg} and ArgoNeuT~\cite{argoneut_eg}).
@@ -553,7 +553,7 @@ Electron-photon separation has been studied in LAr TPCs
 %as shown in Fig.~\ref{fig:egam1}.
 %Currently the 
 %separation efficiency is estimated to be at the level of of 95 \% (?) 
-Fig.~\ref{fig:egam} (from ~\cite{DUNECDR})
+Fig.~\ref{fig:egam} (from ~\cite{dunecdr})
  shows estimated background rejection versus efficiency using 
 simulated isotropic electron and photon event samples  with the 
 APA geometry configuration.
