minor edits, fix typos

--- a/readout.tex
+++ b/readout.tex
@@ -1,4 +1,4 @@
-{\color{red} Need a better introductory paragraph giving a quick high level overview; should include channel count, how many channels are grouped, how many channels read through the same cables, etc. -- large fraction of section is nearly unreadable for non-experts}
+{\color{red} Need a better introductory paragraph giving a quick high level overview before describing details; should include channel count, how many channels are grouped, how many channels read through the same cables, etc.}
 
 The TPC electronics is designed to operate at liquid argon temperature and is placed as close to the sense wires as possible,
 thus minimizing the capacitance and the preamplifier noise.
