--- a/testbeamreq.tex
+++ b/testbeamreq.tex
@@ -61,6 +61,7 @@ The H4ext is an extension of the existing H4 beamline in Experimental Hall North
 %[Waiting for inputs from Ilias]
 
 \subsection{Beam Instrumentation}
+\label{beaminstrument}
 Beam instrumentation provides important information about the characteristics of the beam. It is expected that a series of detectors will be installed along the beam line to measure the particle momentum, identify particle type, and track the particle trajectory.
 
 \subsubsection{Beam Position Detector}
